--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,20 @@
 **/.env.production
 **/.env.test
 frontend/.next/**
-frontend/.next/**/**
+frontend/.next/**/*
+**.pyc
+**.egg-info/**
+**.egg-info/**/*
+**.dist-info/**
+**.dist-info/**/*
+**.whl
+**.whl/**
+**.whl/**/*
+**.whl/**/**/*
+**.whl/**/**/**/*
+**.whl/**/**/**/**/*
+**.whl/**/**/**/**/**/*
+**.whl/**/**/**/**/**/**/*
+**.whl/**/**/**/**/**/**/**/*
+**.next/**
+
