ajout des organisations, domains, dns checker et config nginx

--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,7 @@ frontend/.next/**/*
 **.whl/**/**/**/**/**/**/*
 **.whl/**/**/**/**/**/**/**/*
 **.next/**
-
+**/myenv/**
+**/__pycache__/**
+**/var/**
+**/share/**
