--- a/backend/.env
+++ b/backend/.env
@@ -29,3 +29,6 @@ FRONTEND_URL=http://localhost:3000
 # Configuration websocket pour les notifications en temps réel
 WEBSOCKET_ENABLED=false
 WEBSOCKET_URL=ws://localhost:8765
+
+# MaxMind GeoIP
+GEOIP_DB_PATH=/path/vers/GeoLite2-City.mmdb
