--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -4,3 +4,4 @@ NEXT_PUBLIC_API_URL=http://localhost:5000
 
 # Configuration d'authentification (si nécessaire)
 NEXT_PUBLIC_AUTH_ENABLED=false
+NODE_ENV=development
