--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
         "@tailwindcss/postcss": "^4.0.15",
         "axios": "^1.6.0",
         "date-fns": "^4.1.0",
+        "gray-matter": "^4.0.3",
         "lucide-react": "^0.483.0",
+        "marked": "^15.0.8",
         "next": "^14.0.0",
         "papaparse": "^5.5.2",
         "react": "^18.2.0",
