--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,103 +1,89 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.14
-aiosignal==1.3.2
-alembic==1.15.1
-annotated-types==0.7.0
-anthropic==0.49.0
-anyio==4.9.0
+appdirs==1.4.4
+asgiref==3.8.1
+asttokens==3.0.0
 attrs==25.3.0
-bcrypt==4.3.0
-bidict==0.23.1
-blinker==1.9.0
+beautifulsoup4==4.13.3
+bs4==0.0.2
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
-click==8.1.8
 colorama==0.4.6
-cryptography==44.0.2
-dataclasses-json==0.6.7
-distro==1.9.0
-dnspython==2.7.0
-eventlet==0.35.0
-ffmpeg-python==0.2.0
-filelock==3.18.0
-Flask==2.3.3
-Flask-Cors==4.0.0
-Flask-JWT-Extended==4.7.1
-Flask-Migrate==4.1.0
-Flask-SocketIO==5.3.6
-Flask-SQLAlchemy==3.1.1
-frozenlist==1.5.0
-fsspec==2025.3.0
-future==1.0.0
-geoip2==5.0.1
-greenlet==3.1.1
-gunicorn==21.2.0
+comm==0.2.2
+cssselect==1.3.0
+debugpy==1.8.12
+decorator==5.1.1
+distlib==0.3.8
+Django==5.0.6
+et_xmlfile==2.0.0
+executing==2.2.0
+fake-useragent==2.1.0
+filelock==3.16.1
+fpdf==1.7.2
 h11==0.14.0
-httpcore==1.0.7
-httpx==0.28.1
-huggingface-hub==0.29.3
 idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-jiter==0.9.0
-jsonpatch==1.33
-jsonpointer==3.0.0
-langchain==0.1.0
-langchain-community==0.0.20
-langchain-core==0.1.23
-langsmith==0.0.87
-llvmlite==0.43.0
+importlib_metadata==8.6.1
+ipykernel==6.29.5
+ipython==8.32.0
+jedi==0.19.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 lxml==5.3.1
-Mako==1.3.9
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-maxminddb==2.6.3
-more-itertools==10.6.0
+matplotlib-inline==0.1.7
 mpmath==1.3.0
-multidict==6.2.0
-mypy-extensions==1.0.0
-networkx==3.2.1
-numba==0.60.0
-numpy==1.26.4
-openai-whisper==20240930
-packaging==23.2
-propcache==0.3.0
+nest-asyncio==1.6.0
+numpy==2.2.4
+openpyxl==3.1.5
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
+parse==1.20.2
+parso==0.8.4
+pillow==11.1.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.50
+psutil==7.0.0
+psycopg2-binary==2.9.10
+pure_eval==0.2.3
 pycparser==2.22
-pydantic==2.5.2
-pydantic_core==2.14.5
-PyJWT==2.10.1
-pyotp==2.9.0
-PyPDF2==3.0.1
-python-docx==1.0.1
+pyee==11.1.1
+Pygments==2.19.1
+pyppeteer==2.0.0
+pyquery==2.0.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
-python-engineio==4.8.0
-python-socketio==5.10.0
+pytz==2024.2
+pywin32==308
 PyYAML==6.0.2
-qrcode==8.0
-redis==5.2.1
-regex==2024.11.6
-requests==2.31.0
-safetensors==0.5.3
-setuptools==77.0.3
-simple-websocket==1.1.0
+pyzmq==26.2.1
+requests==2.32.3
+requests-html==0.10.0
+selenium==4.30.0
 six==1.17.0
 sniffio==1.3.1
-SQLAlchemy==2.0.39
-stripe==11.6.0
-sympy==1.13.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+sqlparse==0.5.0
+stack-data==0.6.3
 tenacity==8.5.0
-tiktoken==0.9.0
-tokenizers==0.21.1
-torch==2.6.0
-tqdm==4.67.1
-transformers==4.50.0
-typing-inspect==0.9.0
+tornado==6.4.2
+tqdm==4.66.5
+traitlets==5.14.3
+trio==0.29.0
+trio-websocket==0.12.2
 typing_extensions==4.12.2
+tzdata==2024.1
+tzlocal==5.2
 ua-parser==1.0.1
 ua-parser-builtins==0.18.0.post1
 urllib3==2.3.0
-user-agents==2.2.0
-Werkzeug==3.1.3
+validators==0.34.0
+virtualenv==20.26.6
+w3lib==2.3.1
+watchdog==5.0.3
+wcwidth==0.2.13
+webdriver-manager==4.0.2
+websocket-client==1.8.0
+websockets==10.4
 wsproto==1.2.0
-yarl==1.18.3
+zipp==3.20.2
