add user challenge management

--- a/backend/.env
+++ b/backend/.env
@@ -26,6 +26,8 @@ SENDER_NAME=RecruteIA
 # URL du frontend pour les liens dans les emails
 FRONTEND_URL=http://localhost:3000
 
+API_BASE_URL=http://localhost:5000/api
+
 # Configuration websocket pour les notifications en temps réel
 WEBSOCKET_ENABLED=false
 WEBSOCKET_URL=ws://localhost:8765
