--- a/tsx/package.json
+++ b/tsx/package.json
@@ -16,6 +16,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.503.0",
     "marked": "^15.0.10",
+    "multiparty": "^4.2.3",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/multiparty": "^4.2.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
