--- a/tsx/package.json
+++ b/tsx/package.json
@@ -12,7 +12,10 @@
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "@monaco-editor/react": "^4.7.0",
+    "@radix-ui/react-slot": "^1.2.2",
     "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.10.5",
     "gray-matter": "^4.0.3",
@@ -25,6 +28,7 @@
     "react-dropzone": "^14.3.8",
     "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.2.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -37,6 +41,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   }
 }
