Ajout de la gestion complète des planifications d'entretiens

--- a/backend/.env
+++ b/backend/.env
@@ -18,9 +18,9 @@ CORS_ORIGINS=http://localhost:3000,https://votre-domaine.com
 # Configuration email
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USERNAME=votre_email@gmail.com
-SMTP_PASSWORD=votre_mot_de_passe_ou_cle_app
-SENDER_EMAIL=no-reply@recrute-ia.com
+SMTP_USERNAME=fankamngaleu@gmail.com
+SMTP_PASSWORD=usqr qawz zuvd pheg
+SENDER_EMAIL=no-reply@recruteai.com
 SENDER_NAME=RecruteIA
 
 # URL du frontend pour les liens dans les emails
