--- a/tsx/package.json
+++ b/tsx/package.json
@@ -11,9 +11,14 @@
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@monaco-editor/react": "^4.7.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.15.0",
     "gray-matter": "^4.0.3",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.503.0",
     "marked": "^15.0.10",
     "multiparty": "^4.2.3",
@@ -21,8 +26,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
