--- a/backend/.env
+++ b/backend/.env
@@ -19,7 +19,7 @@ CORS_ORIGINS=http://localhost:3000,https://votre-domaine.com
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USERNAME=fankamngaleu@gmail.com
-SMTP_PASSWORD=usqr qawz zuvd pheg
+SMTP_PASSWORD=
 SENDER_EMAIL=no-reply@recruteai.com
 SENDER_NAME=RecruteIA
 
