--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,4 @@ frontend/.next/**/*
 /docs/tmp/***
 backend/.env
 /debug.log
-backend/data/google_tokens/google_token.json
+backend/data/google_tokens/*.json
