--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -87,3 +87,11 @@ websocket-client==1.8.0
 websockets==10.4
 wsproto==1.2.0
 zipp==3.20.2
+
+
+# ajout Fankam
+
+pip install --upgrade 
+google-apps-meet 
+google-auth-httplib2 
+google-auth-oauthlib
