Ajout de la possibilite d'annuler ou de confirmer une reunion

--- a/backend/.env
+++ b/backend/.env
@@ -19,7 +19,7 @@ CORS_ORIGINS=http://localhost:3000,https://votre-domaine.com
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USERNAME=fankamngaleu@gmail.com
-SMTP_PASSWORD=
+SMTP_PASSWORD=usqr qawz zuvd pheg
 SENDER_EMAIL=no-reply@recruteai.com
 SENDER_NAME=RecruteIA
 
@@ -34,3 +34,5 @@ WEBSOCKET_URL=ws://localhost:8765
 
 # MaxMind GeoIP
 GEOIP_DB_PATH=/path/vers/GeoLite2-City.mmdb
+CANDIDATE_RESPONSE_SECRET=lskskksoijndjdkdpss963skksjdhd
+CANDIDATE_RESPONSE_EXPIRY_HOURS=48
