Test de fonctionnement avec avatar pour une ia en tant que recruteur  autonome lors d'un meeting

--- a/backend/.env
+++ b/backend/.env
@@ -9,6 +9,14 @@ LLM_PROVIDER=openai  # 'openai' ou 'anthropic'
 OPENAI_API_KEY=sk-votre_cle_api_openai
 ANTHROPIC_API_KEY=sk-ant-votre_cle_api_anthropic
 
+
+AZURE_OPENAI_KEY=your_azure_key_here
+AI_API_KEY=your_generic_ai_key_here
+CHROME_DRIVER_PATH=/usr/bin/chromedriver
+AVATAR_HEADLESS=true
+AVATAR_MAX_SESSIONS=10
+AVATAR_TIMEOUT=300
+
 # Configuration de la base de données (si nécessaire)
 DATABASE_URI=sqlite:///recrute_ia.db
 
