--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -95,3 +95,7 @@ pip install --upgrade
 google-apps-meet 
 google-auth-httplib2 
 google-auth-oauthlib
+
+selenium==4.15.0
+webdriver-manager==4.0.1
+requests==2.31.0
