Implementation of coding service

--- a/backend/.env
+++ b/backend/.env
@@ -44,3 +44,7 @@ WEBSOCKET_URL=ws://localhost:8765
 GEOIP_DB_PATH=/path/vers/GeoLite2-City.mmdb
 CANDIDATE_RESPONSE_SECRET=lskskksoijndjdkdpss963skksjdhd
 CANDIDATE_RESPONSE_EXPIRY_HOURS=48
+
+
+JUDGE0_API_URL=https://judge0-ce.p.rapidapi.com
+JUDGE0_API_KEY=7f312ea5cdmsh5d61a750580f791p1f36fejsn4949cb286ea7
