Extension des fonctions de coding game

--- a/backend/.env
+++ b/backend/.env
@@ -48,3 +48,11 @@ CANDIDATE_RESPONSE_EXPIRY_HOURS=48
 
 JUDGE0_API_URL=https://judge0-ce.p.rapidapi.com
 JUDGE0_API_KEY=7f312ea5cdmsh5d61a750580f791p1f36fejsn4949cb286ea7
+
+DATASETS_PATH=/app/datasets/
+
+# Optionnelles (valeurs par défaut OK)
+SQL_QUERY_TIMEOUT=30
+MAX_DATASET_SIZE_MB=100
+NOTEBOOK_EXECUTION_TIMEOUT=300
+API_KEY_ENCRYPTION_KEY=iae0helb4HCROLmQPhIdJd3y5C66J96CiF7BAsqyrhI=
